<resources>
    <string name="app_name">Portfolio App</string>
    <string name="boniface_bassey_akpan">Boniface Bassey Akpan</string>
    <string name="android_developer">Android Developer</string>
    <string name="i_m_warmed_of_mobile_technologies_n_ideas_maker_curious_and_nature_lover">I\'m warmed of mobile technologies. \n Ideas maker, curious and nature lover.</string>
    <string name="facebook">facebook</string>
    <string name="playstore">Playstore</string>
    <string name="github">Github</string>
    <string name="bitbucket">Bitbucket</string>
    <string name="android">Android</string>
    <string name="youtube">Youtube</string>
    <string name="e_mail">E-mail</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_password">Choose Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="enter_password">Enter password</string>
    <string name="choose_a_username">Choose a Username</string>
    <string name="email">Email Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="textview">TextView</string>
</resources>
